--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -1,12 +1,25 @@
+Styles.css
+
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
-    margin: 0;
-    padding: 20px;
+    height: 20px;
+    width: 100%;
+    background-color: #F8F9F9;
+    margin: auto;
+    padding: 0px;
+}
+p {
+  font-weight: bold;
+}
+
+img {
+  max-width: 50%;
+  height: auto;
 }
 
 .box1 {
-    background-color: #ffffff;
+    background-color: #F8F9F9;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px hsla(9, 100%, 64%, 0);
@@ -21,9 +34,11 @@ body {
 
 .cpb {
     background-color: #f8f8f8;
-    color: black;
-    border: none;
-    padding: 10px 20px;
+    color:DeepSkyBlue;
+    width:  100%;
+    height: 50px;
+    border: 1px solid #00BFFF;
+    padding: 1px 1px;
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s, transform 0.3s;
@@ -33,25 +48,32 @@ body {
     background-color: #f8f8f8;
     transform: scale(1.05);
 }
+.a1 {
+    background-color: #F8F9F9;
+    color:DeepSkyBlue;
+}
 
 .inp {
-    width: 80%;
+    width: 85%;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 0px;
+    margin: auto;
 }
 
 .btn1, .btn2 {
+    width: 85%;
+    height: 50px;
     padding: 10px 15px;
-    border-radius: 5px;
-    border: none;
+    border-radius:45px;
+    border: 1px solid #ccc;
     cursor: pointer;
     transition: background 0.3s, transform 0.3s;
 }
 
 .btn1 {
-    background-color: #007BFF;
+    background-color: #27A2FA;
     color: white;
 }
 
@@ -61,7 +83,7 @@ body {
 }
 
 .btn2 {
-    background-color: #FF8000;
+    background-color: #FD7320;
     color: white;
 }
 
@@ -86,7 +108,7 @@ body {
     background-color: #ffffff;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #002aff;
+    border: 1px solid #F8F9F9;
     width: 80%;
     max-width: 400px;
     border-radius: 10px;
@@ -117,8 +139,10 @@ body {
     to {opacity: 1;}
 }
 
-/* Mobile styles */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 560px) {
+    img {
+    width: 100%;
+}
     .box1 {
         padding: 15px;
     }
@@ -131,5 +155,4 @@ body {
 
     .inp {
         width: 95%;
-    }
 }
