--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -1,25 +1,35 @@
-Styles.css
-
-
 body {
-    font-family: Arial, sans-serif;
-    height: 20px;
-    width: 100%;
-    background-color: #F8F9F9;
+    font-family: Arial,sans-serif;
+    height: auto;
+    width: auto;
+    background-color: #FDFEFE;
     margin: auto;
-    padding: 0px;
+    padding: 20px;
 }
-p {
-  font-weight: bold;
+
+hr {
+    border: 0.1px  solid Gainsboro;
 }
 
 img {
-  max-width: 50%;
-  height: auto;
+  margin-left:20%;
+  margin-right: 10%;
 }
 
-.box1 {
-    background-color: #F8F9F9;
+p {
+  font-weight: bold;
+  font-size: 8px;
+}
+
+h1 h2 h3 h4 h5 h6{
+  font-weight: bold;
+  font-size: 10px;
+}
+
+}
+
+box1 {
+    background-color: #FDFEFE;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px hsla(9, 100%, 64%, 0);
@@ -48,9 +58,11 @@ img {
     background-color: #f8f8f8;
     transform: scale(1.05);
 }
+
 .a1 {
-    background-color: #F8F9F9;
+    background-color: #FDFEFE;
     color:DeepSkyBlue;
+    font-size: 12px;
 }
 
 .inp {
@@ -108,7 +120,7 @@ img {
     background-color: #ffffff;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #F8F9F9;
+    border: 1px solid #000000;
     width: 80%;
     max-width: 400px;
     border-radius: 10px;
@@ -116,20 +128,20 @@ img {
 }
 
 .modal-text {
-    color: #002aff;
+    color: #000000;
     font-size: 16px;
     text-align: center;
 }
 
 .close {
-    color: blue;
+    color: black;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
 .close:hover, .close:focus {
-    color: blue;
+    color: black;
     text-decoration: none;
     cursor: pointer;
 }
@@ -139,10 +151,7 @@ img {
     to {opacity: 1;}
 }
 
-@media only screen and (max-width: 560px) {
-    img {
-    width: 100%;
-}
+@media only screen and (max-width: 600px) 
     .box1 {
         padding: 15px;
     }
